Update for Issue 59 Check for template updates Update for Issue 61 max size of template JSON

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -135,6 +135,19 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
                     </div>
                 </div>
                 <div class="divider"></div>
+                <div class="section">
+                    <div class="row">
+                        <div class="col s8 valign-wrapper">
+                            <h6 class="left-align"> Manage Auto Sync Settings:</h6>
+                        </div>
+                        <div class="col s4 right-align">
+                            <a id="autoSyncSettings" class="btn-floating btn-jti tooltipped" data-position="left" data-delay="50" data-tooltip="Manage Auto Sync Settings">
+                                <i class="material-icons">format_list_bulleted</i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="divider"></div>
                 
                 <div class="section">
                     <ul class="collapsible popout" data-collapsible="accordion" id="templateEditor">
@@ -294,6 +307,42 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
                     <ul class="collection" id="customIDsList">
                     </ul>
             </div>
+        </div>
+
+        <!-- Manage auto sync settings section -->
+        <div class="container">
+            <div class="auto-sync-settings-options">
+                <!-- Back button -->
+                <div class="row valign-wrapper">
+                    <div class="col">
+                        <a id="autoSyncSettingsBackButton" class="btn-floating btn-jti tooltipped center-align" data-position="right" data-delay="50" data-tooltip="Back">
+                            <i class="material-icons">arrow_back</i>
+                        </a>
+                    </div>
+                    <div class="col center-align">
+                        <div color="black" class="center-align custom-label">Manage Auto Sync Settings</div>
+                    </div>
+                </div>
+                <div class="divider"></div>
+                <div class="section">
+                    <div class="row">
+                        <div class="col s5 valign-wrapper">
+                            <h6> Add Auto Sync Url:</h6>
+                        </div>
+                        <div class="col s5">
+                            <input id="autoSyncUrlInput" type="text" name="url" placeholder="Auto Sync Url">
+                        </div>
+                        <div class="col s2 right-align">
+                            <a id="addAutoSyncUrlButton" class="btn-floating btn-jti tooltipped custom-Domain-ui" data-position="left" data-delay="50" data-tooltip="Add Auto Sync Url">
+                                <i class="material-icons">add</i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="divider"></div>
+                <!-- List of custom domains -->
+                <ul class="collection" id="autoSyncList">
+                </ul>
         </div>
 
         <!-- Need this to be able to grab the sandbox window to compile the edit templates -->
