--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -69,6 +69,22 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
                 <div class="divider"></div>
                 <div class="section">
                     <div class="row">
+                        <div class="col s5 valign-wrapper">
+                            <h6 class="valign-wrapper"> Load JSON from URL:</h6>
+                        </div>
+                        <div class="col s5">
+                            <input id="jsonURLInput" type="text" name="url" placeholder="URL to JSON file">
+                        </div>
+                        <div class="col s2 right-align">
+                            <a id="download" class="btn-floating btn-jti tooltipped" data-position="left" data-delay="50" data-tooltip="Download Templates">
+                                <i class="material-icons">cloud_download</i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="divider"></div>
+                <div class="section">
+                    <div class="row">
                         <div class="col s3 valign-wrapper">
                             <h6 class="valign-wrapper"> Select file:</h6>
                         </div>
